tests/bad/test_float_blank.marc
MAP:    test_bad_map.fits
        BODY:   Jupiter
        EQ_RAD:         71492
        POL_RAD:        66854
        ROTATION:       PROGRADE
        DATA_TYPE:      FLOAT
        DATA_BLANK:     -32768  # BLANK not valid for floating point data!
        TYPE:           SIMPLE_C
        OPTIONS:
                CENTRIC
        SAMPLES:        50
        LINES:          25

        PLANE:
                LONGITUDE
